scss/mobile.scss
@import 'variables';

#links, #linksthebutton
{
	font-size: 85%;
}
@media (min-width: 480px) and (max-width: 720px)
{
	body 
	{
		font-size: 80%;
	}

	.container 
	{
		height: 60vh; /* screen height */
		max-height: 65vh;
		max-width: 75%;
		top: 5%;
		overflow: hidden;
	}

	h1 
	{
		font: 400 125% $psfont;
		margin: 0;
	}

	.container h2 
	{
		font: 400 90% $psfont;
		margin: 0;
		grid-column: span 2;
	}

	#buttoncontainer 
	{
		bottom: 25%;
	}

	.linkcontainer 
	{
		font-size: 85%;
	}

	.linkcontainer a 
	{
		float: left;
		padding: 0px 5px;
	}

	.headercontainer 
	{
		height: 10vh;
	}
	#simage 
	{
		height: 200px;
		width: 225px;
		text-align: center;
	}
}

@media (min-width: 0) and (max-width: 480px)
{
	body 
	{
		font-size: 80%;
	}

    .container 
    {
        height: 60vh; /* screen height */
        max-height: 65vh;
        max-width: 75%;
        top: 5%;
        overflow: hidden;
    }
	
	h1 
	{
		font: 400 125% $psfont;
		margin: 0;
	}

	.container h2 
	{
		font: 400 90% $psfont;
		margin: 0;
		grid-column: span 2;
	}

    #buttoncontainer 
    {
        bottom: 15%;
    }

	.linkcontainer 
	{
		font-size: 77.5%;
	}

	.linkcontainer a 
	{
		float: left;
		padding: 0px 5px;
	}

	.headercontainer 
	{
		height: 10vh;
	}
	#simage 
	{
		height: 150px;
		width: 200px;
		text-align: center;
	}
}
@media (min-height: 351px) and (max-height: 600px)
{
    body 
    {
        font-size: 70%;
    }

	.container 
	{
		height: 60vh; /* screen height */
		max-height: 65vh;
		max-width: 85%;
		top: 5%;
		overflow: hidden;
	}

	h1 
	{
		font: 400 105% $psfont;
		margin: 0;
	}

	.container h2 
	{
		font: 400 95% $psfont;
		margin: 0;
		grid-column: span 2;
	}

    #buttoncontainer 
    {
        bottom: 10%;
    }

    .linkcontainer
    {
        font-size: 120%;
    }

	.headercontainer 
	{
		height: 10vh;
	}

	.project 
	{
		height: 20vh;
		align-items: flex-start;
		flex-wrap: wrap;
	}
	#simage 
	{
		height: 100px;
		width: 200px;
		text-align: center;
	}
}

@media (min-height: 0) and (max-height: 350px)
{
    body 
    {
        font-size: 60%;
    }

    .container 
    {
        height: 60vh; /* screen height */
        max-height: 65vh;
        max-width: 95%;
        top: 5%;
        overflow: hidden;
	}

	h1 
	{
		font: 400 95% $psfont;
		margin: 0;
	}

	.container h2 
	{
		font: 400 85% $psfont;
		margin: 0;
		grid-column: span 2;
	}

    #buttoncontainer 
    {
        bottom: 5%;
    }

    .linkcontainer
    {
        font-size: 120%;
    }

	.project 
	{
		height: 15vh;
		align-items: flex-start;
		flex-wrap: wrap;
	}

	.headercontainer 
	{
		height: 7.5vh;
	}
	#simage 
	{
		height: 75px;
		width: 200px;
		text-align: center;
	}
}

